appId: org.g07cha.EveryoneIsJohn
jsEngine: graaljs
tags:
  - stable
  - delete-character
onFlowStart:
  - runScript: ../data/selectors.js
  - runScript: ../data/inputs.js
---
- runScript: ../helpers/single-character-store.js
- launchApp:
    clearState: true
    arguments:
      store: ${output.store}

- swipe:
    from:
      id: character_${output.inputs.character.id}
    direction: LEFT
- tapOn:
    id: ${output.selectors.charactersListScreen.deleteCharacterButton}
- tapOn: 'Delete'
- assertNotVisible:
    id: character_${output.inputs.character.id}
